[package]
name = "crabsay"
version = "0.1.0"
authors = ["Maxwell Anderson"]
license = "MIT OR Apache-2.0"
description = "A cowsay-like binary package using ferris-says"
repository = "https://github.com/Zaechus/crabsay"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ferris-says = "0.2.1"
