[package]
name = "crabsay"
version = "0.1.1"
authors = ["Maxwell Anderson <maxwell.anderson.public@protonmail.com>"]
license = "MIT OR Apache-2.0"
description = "A cowsay-like package using ferris-says"
repository = "https://github.com/Zaechus/crabsay"
edition = "2021"

[dependencies]
ferris-says = "0.2.1"
